--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
+  sqflite: ^2.2.0+3
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
