--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,14 @@ dependencies:
   flutter_svg: ^1.1.6
   sqflite: ^2.2.0+3
   path: ^1.8.2
+  floor: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
+  floor_generator: ^1.3.0
+  build_runner: ^2.1.2
 
 flutter:
   uses-material-design: true
